Fix admin dashboard + checkbox alignment

--- a/frontend/src/styles/AdminPage.css
+++ b/frontend/src/styles/AdminPage.css
@@ -4,6 +4,28 @@
   margin-bottom: 20px;
 }
 
+.featured-flag {
+  font-size: 1.0rem;
+}
+
+.featured-select,
+.new-select {
+  display: flex;
+  position: relative;
+  margin-top: 5px !important;
+  width: 100%;
+}
+
+
+.check-boxes {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 15px !important;
+  margin: 5px 25%;
+}
+
 .admin-tabs button {
   padding: 6px 14px;
   margin-top: 15px;
@@ -12,6 +34,28 @@
   color: white;
   cursor: pointer;
   border-radius: 6px;
+}
+
+.metrics-dashboard {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 25px;
+  width: 80vw;
+  height: auto;
+  max-width: 380px;
+  background-color: white;
+  z-index: 12000;
+
+}
+
+.metrics-close {
+  display: flex;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  background: transparent;
+  border: none;
 }
 
 .admin-tabs button.active-tab {
@@ -67,6 +111,7 @@
 .custom-file-upload {
   border: 1px solid black;
   display: inline-block;
+  margin-top: 8px;
   padding: 6px 12px;
   cursor: pointer;
 }
@@ -204,6 +249,12 @@
   margin-bottom: 10px;
   border: 1px solid;
   box-shadow: 2px 2px 4px rgb(0, 0, 0, 0.3);
+}
+
+.product-input-field,
+.product-input-field-description::placeholder {
+  font-size: 1.0rem;
+  opacity: 0.9;
 }
 
 .product-input-field-description {
